@@ -177,6 +177,7 @@ Version 1.3
    options.xml) (Justin)
  - Add Aeotec LED Bulb, MultiSensor 6 and SmartSwitch 6 Configs (Justin)
  - Add Aeotec DSC24 identification and Everspring AD147 identification + config
+ - Add Schlage BE469NXCEN TouchScreen DeadBolt from Rushidesai (Justin)
 
 Version 1.2 
  - Released on 15/10/14
